words embedding examples

--- a/Tensorflow/tutorials/ML_basics_with_Keras/Basic_text_classification..ipynb
+++ b/Tensorflow/tutorials/ML_basics_with_Keras/Basic_text_classification..ipynb
@@ -698,7 +698,7 @@
     "The layers are stacked sequentially to build the classifier:\n",
     "\n",
     "The first layer is an Embedding layer. This layer takes the integer-encoded reviews and looks up an embedding vector for each word-index. These vectors are learned as the model trains. The vectors add a dimension to the output array. The resulting dimensions are: (batch, sequence, embedding). To learn more about embeddings, see the [**word embedding tutorial**](https://www.tensorflow.org/tutorials/text/word_embeddings).\n",
-    "Next, a [**GlobalAveragePooling1D**]() layer returns a fixed-length output vector for each example by averaging over the sequence dimension. This allows the model to handle input of variable length, in the simplest way possible.\n",
+    "Next, a [**GlobalAveragePooling1D**](https://www.tensorflow.org/api_docs/python/tf/keras/layers/GlobalAveragePooling1D) layer returns a fixed-length output vector for each example by averaging over the sequence dimension. This allows the model to handle input of variable length, in the simplest way possible.\n",
     "This fixed-length output vector is piped through a fully-connected ([**Dense**]()) layer with 16 hidden units.\n",
     "The last layer is densely connected with a single output node."
    ]
@@ -1051,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
